Fix issue of Carousel controls overflowing page width
Issue:
- Carousel controls overflowing width of page.

Solution:
- Change left style property value of .previous control to have a value of 0.
- Change right style property value of .next control to have a value of 0.

--- a/src/sass/components/_carousel.scss
+++ b/src/sass/components/_carousel.scss
@@ -37,12 +37,6 @@
       display: inline-flex;
       justify-content: center;
       align-items: center;
-      width: 60px;
-      height: 60px;
-      // background-color: $white;
-      // border-radius: 5px;
-      // box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px,
-      //   rgba(0, 0, 0, 0.12) 0px 3px 1px -2px, rgba(0, 0, 0, 0.2) 0px 1px 5px 0px;
       transition: all 0.2s ease;
 
       &:hover {
@@ -61,7 +55,7 @@
     }
 
     &.previous {
-      left: -20px;
+      left: 0;
 
       @media screen and (min-width: 900px) {
         left: -10px;
@@ -75,7 +69,7 @@
     }
 
     &.next {
-      right: -20px;
+      right: 0;
 
       @media screen and (min-width: 900px) {
         right: -10px;
